fix: z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -200,7 +200,7 @@ body {
 }
 
 .landing {
-  z-index: 100;
+  z-index: 1;
 }
 
 .landing:before {
